# mcp-ecosystem

./: .env.todo.clean  .eslintrc  .gitconfig  .gitignore  .gitmessage  .llm-coordination.json  .llm-session.json  .pnpm-workspace-state-v1.json  AGENTS.md  CHANGELOG.md  CLI_TOOLS_GUIDE.md  COORDINATION_SYSTEM_COMPLETE.md  COORDINATION_SYSTEM_IMPROVEMENTS.md  COPILOT_ZSH_IMPLEMENTATION_SUMMARY.md  COVERAGE_ANALYSIS_IMPLEMENTATION.md  CRITICAL_LINKS_FIXED.md  CRITICAL_LINK_ISSUES.md  CROSS_PROJECT_SETUP_COMPLETE.md  INFRASTRUCTURE_STATUS.md  INTEGRATION_SUMMARY.md  LICENSE  LINK_ANALYSIS_REPORT.md  MCP_BRIDGE_INTEGRATION_COMPLETE.md  MCP_ECOSYSTEM_IMPLEMENTATION_SUMMARY.md  MCP_ECOSYSTEM_OVERVIEW.md  OPENCODE_HEADLESS_COMMUNICATION_WORKFLOW.md  OPENCODE_MULTI_PROJECT_COMPLETE_GUIDE.md  OPENCODE_SERVERS_COMPLETE_GUIDE.md  OPENCODE_STANDARDIZATION_COMPLETE.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_DOCUMENTATION.md  README.md  REORGANIZATION_COMPLETE.md  ROADMAP.md  SESSION_SUMMARY_MCP_INTEGRATION.md  SHARED_TODO_SYSTEM_GUIDE.md  SPECIFICATION.md  UNIFIED_COORDINATION_COMPLETE.md  comprehensive_yaml_fix.js  cross-project-orchestration.md  (+41 more)
.bin/: pm2  pm2-dev  pm2-docker  pm2-runtime  puppeteer
.github/: plan.prompt.md  pull_request_template.md  specify.prompt.md  tasks.prompt.md
src/mcp-ecosystem/servers/: coordination-server.js  debug_imports.py  debug_server_startup.py  minimal_test.py  pyproject.toml  simple_test_server.js  test_mcp_server.py  test_memory_operations.py  test_report.md  test_server.py
src/mcp-ecosystem/servers/mem0_mcp.egg-info/: PKG-INFO  SOURCES.txt
(+301 files in other folders)
